[gd_scene load_steps=12 format=3 uid="uid://qdrkt7rrr4gk"]

[ext_resource type="Script" path="res://Decks/deck.gd" id="1_7dbpm"]
[ext_resource type="Texture2D" uid="uid://c0etsep4ykr3h" path="res://Decks/Images/deckpack.png" id="2_ffq5v"]
[ext_resource type="AudioStream" uid="uid://3n10cljfourv" path="res://Audio/deckpick.wav" id="3_iubq0"]
[ext_resource type="AudioStream" uid="uid://dbund1qsdw0nh" path="res://Audio/deckshoot.wav" id="3_kgms5"]

[sub_resource type="Animation" id="Animation_7iwdv"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath(".:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [0]
}

[sub_resource type="AudioStreamRandomizer" id="AudioStreamRandomizer_ofo6o"]
streams_count = 1
random_pitch = 1.2
random_volume_offset_db = 1.0
stream_0/stream = ExtResource("3_iubq0")
stream_0/weight = 1.0

[sub_resource type="Animation" id="Animation_bilue"]
resource_name = "deckdespawn"
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath(".:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.1, 0.2, 0.3, 0.4, 0.5, 0.6, 0.7, 0.8),
"transitions": PackedFloat32Array(1, 1, 1, 1, 1, 1, 1, 1, 1),
"update": 1,
"values": [8, 7, 6, 5, 4, 3, 2, 1, 0]
}
tracks/1/type = "method"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("..")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0.9),
"transitions": PackedFloat32Array(1),
"values": [{
"args": [],
"method": &"deck_picked"
}]
}
tracks/2/type = "audio"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("../AudioStreamPlayer2D")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"clips": [{
"end_offset": 0.0,
"start_offset": 0.0,
"stream": SubResource("AudioStreamRandomizer_ofo6o")
}],
"times": PackedFloat32Array(0)
}
tracks/2/use_blend = true

[sub_resource type="AudioStreamRandomizer" id="AudioStreamRandomizer_umlyn"]
streams_count = 1
playback_mode = 2
random_pitch = 1.5
random_volume_offset_db = 1.0
stream_0/stream = ExtResource("3_kgms5")
stream_0/weight = 1.0

[sub_resource type="Animation" id="Animation_13rlx"]
resource_name = "deckspawn"
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath(".:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.1, 0.2, 0.3, 0.4, 0.5, 0.6, 0.7, 0.8, 0.9),
"transitions": PackedFloat32Array(1, 1, 1, 1, 1, 1, 1, 1, 1, 1),
"update": 1,
"values": [0, 1, 2, 3, 4, 5, 6, 7, 8, 9]
}
tracks/1/type = "audio"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("../AudioStreamPlayer2D")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"clips": [{
"end_offset": 0.0,
"start_offset": 0.0,
"stream": SubResource("AudioStreamRandomizer_umlyn")
}],
"times": PackedFloat32Array(-0.3)
}
tracks/1/use_blend = true

[sub_resource type="AnimationLibrary" id="AnimationLibrary_g22rp"]
_data = {
"RESET": SubResource("Animation_7iwdv"),
"deckdespawn": SubResource("Animation_bilue"),
"deckspawn": SubResource("Animation_13rlx")
}

[sub_resource type="RectangleShape2D" id="RectangleShape2D_1qmxr"]
size = Vector2(134, 192)

[node name="Deck" type="Area2D"]
script = ExtResource("1_7dbpm")

[node name="Sprite2D" type="Sprite2D" parent="."]
position = Vector2(-4, -2)
texture = ExtResource("2_ffq5v")
hframes = 10

[node name="AnimationPlayer" type="AnimationPlayer" parent="Sprite2D"]
libraries = {
"": SubResource("AnimationLibrary_g22rp")
}

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2(-1, 3)
shape = SubResource("RectangleShape2D_1qmxr")

[node name="AudioStreamPlayer2D" type="AudioStreamPlayer2D" parent="."]
bus = &"Cards"

[connection signal="input_event" from="." to="." method="_on_input_event"]
[connection signal="mouse_entered" from="." to="." method="_on_mouse_entered"]
[connection signal="mouse_exited" from="." to="." method="_on_mouse_exited"]
[connection signal="animation_finished" from="Sprite2D/AnimationPlayer" to="." method="_on_animation_player_animation_finished"]
